small tweaks to fix alignment problems in monobook
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@47006 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/Wall/css/WallNotificationsMonobook.css
+++ b/extensions/wikia/Wall/css/WallNotificationsMonobook.css
@@ -178,10 +178,10 @@
 	background: none;
 }
 
-.SpeechBubble.message .timestamp{
-	float: left;
-}
-
 .SpeechBubble.message .buttons{
 	text-align: right;
+}
+
+.replies .message-removed .deleteorremove-infobox::before, .replies .message-removed .deleteorremove-infobox::after {
+	width: 99%;
 }
